Fix verifier compilation